--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,34 @@ board = az-delivery-devkit-v4
 framework = arduino
 monitor_speed = 115200 
 
+build_flags = 
+	-D USER_SETUP_LOADED=1
+	-D GC9A01_DRIVER=1
+	-D TFT_WIDTH=240
+	-D TFT_HEIGHT=240
+	-D TFT_MISO=19
+	-D TFT_MOSI=23
+	-D TFT_SCLK=18
+	-D TFT_CS=4
+	-D TFT_DC=2
+	-D TFT_RST=15
+	-D TFT_SDA_READ
+	-D SMOOTH_FONT
+	-D LOAD_GLCD
+	-D LOAD_FONT2
+	-D LOAD_FONT4
+	-D LOAD_FONT6
+	-D LOAD_FONT7
+	-D LOAD_FONT8
+	-D LOAD_GFXFF
+	-D SPI_FREQUENCY=27000000
+	-D SPI_READ_FREQUENCY=20000000
+
 lib_deps =
   # RECOMMENDED
   # Accept new functionality in a backwards compatible manner and patches
   mikalhart/TinyGPSPlus @ ^1.1.0
-
+  bodmer/TFT_eSPI@^2.5.43
+	bodmer/TJpg_Decoder@^1.1.0
+  bodmer/TFT_eWidget @ ^0.0.6
 ; upload_port = 192.168.1.116
